# reflection-analyser

./: README.md  pyproject.toml
examples/: basic_usage.md
src/reflection_analyser/: __init__.py  analyser.py  api.py  cli.py  embedding.py  exceptions.py  lexicon.py  manifest.py  schemas.py
tests/: test_analyser.py  test_api.py  test_cli.py  test_embedding.py  test_lexicon.py  test_public_api.py
